src/test/deca/codegen/valid/testConvFloat.ass
; start main program
	TSTO #1
	BOV stack_overflow_error
; Main program
	ADDSP #1
	LOAD #0x1.0p1, R2
	STORE R2, 1(GB)
; Beginning of main instructions:
	LOAD 1(GB), R2
	LOAD #1, R3
	FLOAT R3, R3
	ADD R3, R2
	BOV ArithFloat_Error
	STORE R2, 1(GB)
	HALT
stack_overflow_error:
	WSTR "Error: Stack Overflow"
	WNL
	ERROR
io_error:
	WSTR "Error: Input/Output error"
	WNL
	ERROR
ArithFloat_Error:
	WSTR "Error: Débordement arithmétique sur flottants"
	WNL
	ERROR
ZeroDivision_Error:
	WSTR "Error: Division entière par 0"
	WNL
	ERROR
; end main program
