src/test/deca/codegen/invalid/testDeborFloatPrime.ass
; start main program
	TSTO #1
	BOV stack_overflow_error
; Main program
	ADDSP #1
	LOAD #0x1.f4p9, R2
	STORE R2, 1(GB)
; Beginning of main instructions:
	BRA E_Cond1
E_Debut1:
	LOAD 1(GB), R2
	MUL 1(GB), R2
	BOV ArithFloat_Error
	MUL 1(GB), R2
	BOV ArithFloat_Error
	MUL 1(GB), R2
	BOV ArithFloat_Error
	STORE R2, 1(GB)
E_Cond1:
	BRA E_Debut1
	HALT
stack_overflow_error:
	WSTR "Error: Stack Overflow"
	WNL
	ERROR
io_error:
	WSTR "Error: Input/Output error"
	WNL
	ERROR
ArithFloat_Error:
	WSTR "Error: Débordement arithmétique sur flottants"
	WNL
	ERROR
ZeroDivision_Error:
	WSTR "Error: Division entière par 0"
	WNL
	ERROR
; end main program
